demo-application/demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik
spec:
  selector:
    app: whoami
  ports:
  - port: 80
    targetPort: 80
